k8s/base/hello/services.yaml
apiVersion: v1
kind: Service
metadata: { name: hello, namespace: hello, labels: { app: hello } }
spec:
  selector: { app: hello }
  ports:
    - { name: http, port: 8080, targetPort: http }
    - { name: metrics, port: 9113, targetPort: metrics }
---
apiVersion: v1
kind: Service
metadata: { name: hello-v1, namespace: hello, labels: { app: hello, variant: v1 } }
spec:
  selector: { app: hello, variant: v1 }
  ports:
    - { name: http, port: 8080, targetPort: http }
    - { name: metrics, port: 9113, targetPort: metrics }
---
apiVersion: v1
kind: Service
metadata: { name: hello-v2, namespace: hello, labels: { app: hello, variant: v2 } }
spec:
  selector: { app: hello, variant: v2 }
  ports:
    - { name: http, port: 8080, targetPort: http }
    - { name: metrics, port: 9113, targetPort: metrics }
